# MotionVectorization

./: .gitignore  .replit  README.md  app.py  docker_alternative.md  install_gpu_dependencies.sh  install_gpu_libraries.sh  pack_for_runpod.sh  pyproject.toml  quick_deploy_commands.txt  replit.md  requirements.txt  run_motion_vectorization.py  runpod_config.json  runpod_deployment_guide.md  smoke_test_summary.py  start_runpod.sh  test_bridge_smoke.py  test_cotracker3_integration.py  test_engine_simple.py  test_engine_smoke.py  test_engine_status.py  test_pipeline_smoke.py  test_sam2_integration.py  test_unified_pipeline.py  test_validation.py  unified_pipeline_test_report.json
RAFT/: corr.py  demo.py  extract_flow.py  extractor.py  raft.py  update.py
attached_assets/: Pasted--FRAME-34-33-CLUSTERS-NOTE-Active-shapes-0-NOTE-curr-fg-comp-to-la-1757457796877_1757457796878.txt  Pasted--FRAME-35-34-CLUSTERS-NOTE-Active-shapes-0-NOTE-curr-fg-comp-to-la-1757456740713_1757456740714.txt  Pasted--File-frozen-runpy-line-198-in-run-module-as-main-File-frozen-runpy-line-88-in-run--1757527040315_1757527040316.txt  Pasted--File-frozen-runpy-line-88-in-run-code-File-workspace-MotionVectorization-motion-vectori-1757461689043_1757461689044.txt  Pasted--File-workspace-MotionVectorization-motion-vectorization-optimize-shapes-py-line-265-in-main--1757501097229_1757501097231.txt  Pasted--FileNotFoundError-Errno-2-No-such-file-or-directory-1757507923997_1757507923998.txt  Pasted--PyTorch-pip-pip-install-torch-2-0-1-torchvision-0-15-2-index-url-https-downloa-1757459832850_1757459832851.txt  Pasted--PyTorch-pip-uninstall-y-torch-torchvision-torchaudio-conda-remove-fo-1757454846925_1757454846927.txt  Pasted--RAFT-ls-videos-demo-flow-001-png-007-png-013-png-019-png-025-png-031-png-050-1757495121021_1757495121021.txt  Pasted--WARNING-Configs-file-not-found-Using-default-json-instead-shapes-folder-motion-vectorization-ou-1757525888824_1757525888825.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization--1757458825656_1757458825657.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-200-bash-E-200--1757456211031_1757456211032.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-Python-motion-vectorizatio-1757458957811_1757458957812.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-cat-motion-vectorization-config-hassan-js-1757461476553_1757461476555.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-hassan-script-1757460414335_1757460414337.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-pip-insta-1757455249147_1757455249148.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-pip-install-drawSvg-Requirement-already-sat-1757460833963_1757460833964.txt  Pasted--base-root-30fb68955ee8-workspace-MotionVectorization-symlinks-RAFT-cd--1757455780543_1757455780544.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-GPU-nvidia-s-1757453137626_1757453137627.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-RAFT--1757450327359_1757450327359.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-apt-install-y-parallel-Rea-1757450189807_1757450189808.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-cd-workspace-MotionVectori-1757452488401_1757452488403.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-cd-workspace-MotionVectori-1757452647995_1757452647997.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-cd-workspace-MotionVectori-1757453293449_1757453293450.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-conda-activate-motion-vecto-1757451263955_1757451263956.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-export-PYTHONPATH-PYTHON-1757451757574_1757451757576.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-export-PYTHONPATH-PYTHON-1757451851187_1757451851187.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-logs-mkdir-p--1757450629996_1757450629997.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-ls--1757459520740_1757459520741.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-motion-vectoriz-1757459750001_1757459750002.txt  Pasted--motion-vectorization-root-30fb68955ee8-workspace-MotionVectorization-sed-i-14s--1757451030528_1757451030530.txt  Pasted--python3-c-import-torch-import-torchvision-print-PyTorch-version-torch--1757460212431_1757460212433.txt  Pasted--scripts-convert-to-svg-sh-test1-30-Requirement-already-satisfied-drawSvg-in-opt-miniconda3-lib-py-1757458747124_1757458747125.txt  Pasted--scripts-extract-flow-sh-line-14-cd-too-many-arguments-videos-test-txt-CLUSTER-test1-Traceback--1757450783961_1757450783962.txt  Pasted--scripts-final-script-sh-videos-demo-txt-0it-00-00-it-s-workspace-MotionVectorization-RAFT-core-1757495382338_1757495382339.txt  Pasted--unzip-0-upgraded-1-newly-installed-0-to-remove-and-109-not-upgraded-Need-to-get-175-kB-of-arc-1757427995051_1757427995052.txt  Pasted--xml-version-1-0-encoding-UTF-8-svg-xmlns-http-www-w3-org-2000-svg-xmlns-xlink-http--1757506566237_1757506566238.txt  Pasted-A-module-that-was-compiled-using-NumPy-1-x-cannot-be-run-in-NumPy-2-1-2-as-it-may-crash-To-support--1757455098070_1757455098071.txt  Pasted-Create-the-HTML-page-In-the-file-tree-inside-ui-create-a-folder-named-templates-Inside-ui-templ-1757363471627_1757363471628.txt  Pasted-Editing-Motion-Graphics-Video-via-Motion-Vectorization-and-Program-Transformation-Links-Project-pa-1757448649188_1757448649189.txt  (+38 more)
motion_vectorization/: compositing.py  correction_gui.py  cotracker3_engine.py  create_motion_file.py  dataloader.py  engine_status.py  engine_status_old.py  evaluation.py  extract_clusters.py  extract_shapes.py  fill_frame_gaps.py  flowseek_engine.py  optimize_shapes.py  preprocess.py  process_video.py  processor.py  sam2_engine.py  (+8 more)
(+23 files in other folders)
