[project]
name = "motion-vectorization-pipeline"
version = "2.0.0"
description = "State-of-the-art motion vectorization with SAM2.1 + CoTracker3 + FlowSeek (ICCV 2025)"
requires-python = ">=3.11"
authors = [
    {name = "Motion Vectorization Team", email = "team@motionvectorization.ai"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["computer-vision", "motion-tracking", "optical-flow", "segmentation", "vectorization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video :: Display",
]

# Minimal core dependencies - GPU libraries installed separately via install_gpu_libraries.sh
dependencies = [
    # Core data processing (CPU-safe)
    "numpy>=2.3.2",
    "pillow>=11.3.0", 
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.1",
    "networkx>=3.5",
    "matplotlib>=3.10.6",
    
    # Image processing utilities
    "scikit-image>=0.25.2",
    
    # Vector graphics output
    "drawsvg>=2.4.0",
    
    # Configuration management
    "hydra-core>=1.3.0",
    "iopath>=0.1.10",
    
    # Shape analysis utilities
    "pyefd>=1.5.0",
]

[project.optional-dependencies]
# GPU dependencies - Install via install_gpu_libraries.sh for optimal performance
gpu = [
    "torch>=2.5.1",
    "torchvision>=0.20.1", 
    "torchaudio>=2.5.1",
    "transformers>=4.56.0",
    "accelerate>=1.2.1",
    "timm>=1.0.11",
    "bitsandbytes>=0.45.0",
]

# Development dependencies  
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

# Latest AI model dependencies (installed on GPU server)
models = [
    "sam2 @ git+https://github.com/facebookresearch/sam2.git@main",
    "cotracker @ git+https://github.com/facebookresearch/co-tracker.git@main", 
    "flowseek @ git+https://github.com/princeton-vl/FlowSeek.git@main",
]

[project.urls]
Homepage = "https://github.com/motionvectorization/pipeline"
Repository = "https://github.com/motionvectorization/pipeline"
Documentation = "https://motionvectorization.readthedocs.io"
Issues = "https://github.com/motionvectorization/pipeline/issues"

[project.scripts]
motion-vectorize = "motion_vectorization.cli:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["motion_vectorization*", "svg_utils*", "scripts*"]
exclude = ["tests*", "attached_assets*", "uploads*", "downloads*"]

[tool.setuptools.package-data]
motion_vectorization = ["config/*.json"]
svg_utils = ["js/*.js"]

# PyTorch CUDA 12.4 index for GPU installations only
[[tool.uv.index]]
explicit = true
name = "pytorch-cuda124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = [{ index = "pytorch-cuda124", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cuda124", marker = "platform_system == 'Linux'" }]
torchaudio = [{ index = "pytorch-cuda124", marker = "platform_system == 'Linux'" }]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | attached_assets
  | uploads
  | downloads
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "attached_assets/", 
    "uploads/",
    "downloads/",
    "test_*.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "motion_vectorization",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
]