[project]
name = "motion-vectorization-pipeline"
version = "2.0.0"
description = "State-of-the-art motion vectorization with SAM2.1 + CoTracker3 + FlowSeek (ICCV 2025)"
requires-python = ">=3.11"
authors = [
    {name = "Motion Vectorization Team", email = "team@motionvectorization.ai"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["computer-vision", "motion-tracking", "optical-flow", "segmentation", "vectorization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video :: Display",
]

# ABSOLUTE LATEST 2025 VERSIONS - ALL updated to January 2025 latest releases  
dependencies = [
    # Core data processing (ABSOLUTE LATEST 2025)
    "numpy>=2.2.2",              # Latest NumPy (Jan 18, 2025) - free-threading support
    "pillow>=11.1.0",            # Latest PIL/Pillow (Jan 2, 2025) - Python 3.13 support
    "opencv-python>=4.12.0.88",  # Latest OpenCV (July 7, 2025) - NumPy 2.2+ compatibility
    "scipy>=1.16.1",             # Latest SciPy (July 27, 2025) - Python 3.14 support
    "networkx>=3.6",             # Latest NetworkX 2025
    "matplotlib>=3.10.6",        # Latest Matplotlib (Aug 30, 2025) - petroff10 colors
    
    # Image processing utilities (ABSOLUTE LATEST 2025)
    "scikit-image>=0.25.2",      # Latest scikit-image (Feb 18, 2025) - Python 3.13 support
    "pymatting>=1.1.14",         # Alpha matting library (latest stable)
    
    # Vector graphics output (Latest)
    "drawsvg>=2.4.0",            # Latest DrawSVG
    
    # Configuration management (Latest)
    "hydra-core>=1.3.0",         # Latest Hydra
    "iopath>=0.1.10",            # Latest IOPath
    
    # Shape analysis utilities (Latest 2025)
    "pyefd>=1.6.0",              # Elliptic Fourier Descriptors (latest stable)
]

[project.optional-dependencies]
# GPU dependencies - ABSOLUTE LATEST 2025 versions for cutting-edge performance
gpu = [
    "torch>=2.8.0",              # Latest PyTorch (2025) with CUDA 12.8 support 
    "torchvision>=0.23.0",       # Latest TorchVision (compatible with PyTorch 2.8)
    "torchaudio>=2.8.0",         # Latest TorchAudio (2025)
    "transformers>=4.56.0",      # Latest Transformers (HuggingFace 2025)
    "accelerate>=1.10.1",        # Latest Accelerate (Aug 25, 2024) - distributed training
    "timm>=1.0.11",              # Latest TIMM (2025) 
    "bitsandbytes>=0.45.0",      # Latest BitsAndBytes (2025)
    "kornia>=0.8.1",             # Latest Kornia (May 8, 2025) - differentiable CV
]

# Development dependencies  
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

# Latest AI model dependencies (installed on GPU server)
models = [
    "sam2 @ git+https://github.com/facebookresearch/sam2.git@main",
    "cotracker @ git+https://github.com/facebookresearch/co-tracker.git@main", 
    "flowseek @ git+https://github.com/princeton-vl/FlowSeek.git@main",
]

[project.urls]
Homepage = "https://github.com/motionvectorization/pipeline"
Repository = "https://github.com/motionvectorization/pipeline"
Documentation = "https://motionvectorization.readthedocs.io"
Issues = "https://github.com/motionvectorization/pipeline/issues"

[project.scripts]
motion-vectorize = "motion_vectorization.cli:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["motion_vectorization*", "svg_utils*", "scripts*"]
exclude = ["tests*", "attached_assets*", "uploads*", "downloads*"]

[tool.setuptools.package-data]
motion_vectorization = ["config/*.json"]
svg_utils = ["js/*.js"]

# PyTorch CUDA 12.8 index for latest GPU support (RTX 50xx series compatible)
[[tool.uv.index]]
explicit = true
name = "pytorch-cuda128"
url = "https://download.pytorch.org/whl/cu128"

# Fallback CUDA 12.6 index for wider compatibility
[[tool.uv.index]]
explicit = true
name = "pytorch-cuda126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
# Use latest CUDA 12.8 for optimal performance
torch = [{ index = "pytorch-cuda128", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cuda128", marker = "platform_system == 'Linux'" }]
torchaudio = [{ index = "pytorch-cuda128", marker = "platform_system == 'Linux'" }]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | attached_assets
  | uploads
  | downloads
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "attached_assets/", 
    "uploads/",
    "downloads/",
    "test_*.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "motion_vectorization",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
]